--- a/.eslintignore
+++ b/.eslintignore
@@ -2,11 +2,11 @@ node_modules
 coverage
 spec/react_on_rails/dummy-for-generators
 spec/dummy
-node_package/src/__obsolete
-node_package/lib/
-node_package/tests/node_modules
-node_package/tests/fixtures
-node_package/webpack.config.js
+packages/vm-renderer/src/__obsolete
+packages/vm-renderer/lib/
+packages/vm-renderer/tests/node_modules
+packages/vm-renderer/tests/fixtures
+packages/vm-renderer/webpack.config.js
 **/node_modules/**
 **/assets/webpack/**
 **/generated/**
