--- a/react_on_rails_pro/.gitignore
+++ b/react_on_rails_pro/.gitignore
@@ -25,8 +25,8 @@
 
 node_modules
 
-/node_package/lib
-/node_package/tests/tmp
+/packages/vm-renderer/lib
+/packages/vm-renderer/tests/tmp
 
 yarn-debug.*
 spec/dummy/client/yarn-debug.log*
