--- a/react_on_rails_pro/spec/dummy/client/package.json
+++ b/react_on_rails_pro/spec/dummy/client/package.json
@@ -35,8 +35,8 @@
     "react-dom": "^15.6.1",
     "react-helmet": "^5.1.3",
     "react-hot-loader": "^3.0.0-beta.6",
-    "react-on-rails": "11.0.3",
-    "react-on-rails-pro": "file:../../..",
+    "react-on-rails": "11.0.4",
+    "react-on-rails-pro-vm-renderer": "file:../../..",
     "react-proptypes": "^1.0.0",
     "react-redux": "^5.0.5",
     "react-router": "3.0.5",
@@ -70,6 +70,8 @@
   "scripts": {
     "lint": "eslint --ext .js,.jsx .",
     "test": "yarn run build:test && rspec",
+    "preinstall": "cd ../../.. && yarn link",
+    "postinstall": "yarn link react-on-rails-pro-vm-renderer",
     "build:test": "yarn run build:test:client && yarn run build:test:server",
     "build:test:client": "NODE_ENV=test webpack --config webpack.client.rails.build.config.js",
     "build:test:server": "NODE_ENV=test webpack --config webpack.server.rails.build.config.js",
@@ -79,7 +81,6 @@
     "build:production:server": "NODE_ENV=production webpack -p --config webpack.server.rails.build.config.js",
     "build:production": "yarn run build:production:server && yarn run build:production:client",
     "hot-assets": "NODE_ENV=development babel-node server-rails-hot.js",
-    "install-pro-package": "(rm -rf node_modules/react-on-rails-pro || true) && npm i 'file:../../..'",
     "vm-renderer": "node vm-renderer.js"
   },
   "author": "",
