--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -117,6 +117,8 @@ jobs:
           paths:
             - spec/dummy/vendor/bundle
   # Build client and server bundles for dummy app with Webpack and save them to cache.
+  # NOTE: keeping around this cache in case we have multiple rspec suites in the future to tests
+  # different node renderers.
   build-dummy-app-webpack-test-bundles:
     docker:
       - image: circleci/ruby:2.4.4-stretch-node
@@ -133,7 +135,7 @@ jobs:
           name: Save test webpack bundles to cache (for build number checksum used by rspec job)
           key: v3-dummy-app-webpack-bundle-{{ .Revision }}
           paths:
-            - spec/dummy/app/assets/webpack
+            - spec/dummy/public/webpack
   # Run JS unit tests for Renderer package.
   package-js-tests:
     docker:
@@ -147,22 +149,24 @@ jobs:
           name: Run JS unit tests for Renderer package
           command: yarn test
   # Start Renderer and run RSpec test suite for dummy app.
+  # NOTES:
+  # Seems that we cannot use symlinks (yarn link) with caches for the main renderer package
+  # react-on-rails-pro-vm-renderer. Consequently, we just reinstall the top level, renderer, node packages
+  # as well as the
   rspec-dummy-app:
     docker:
       - image: circleci/ruby:2.4.4-stretch-node
     steps:
       - checkout
+      - run: *install-phantomjs
       - run: *print-system-info
       - restore_cache: *restore-dummy-app-gem-cache
-      - run: *install-phantomjs
-      - run: *install-dummy-app-ruby-gems
-      - run: *install-package-node-modules
-      - run: *install-dummy-app-node-modules
-      - restore_cache: *restore-package-node-modules-cache
-      - restore_cache: *restore-dummy-app-node-modules-cache
       - restore_cache:
           name: Restore cached webpack bundles for dummy app
           key: v3-dummy-app-webpack-bundle-{{ .Revision }}
+      - run: *install-dummy-app-ruby-gems
+      - run: *install-package-node-modules
+      - run: *install-dummy-app-node-modules
       - run: *install-yarn-link-source
       - run: *install-yarn-link-destination
       - run:
@@ -170,7 +174,10 @@ jobs:
           command: cd spec/dummy && yarn run vm-renderer
           background: true
       - run:
-          name: Run tests
+          name: Touch webpack bundles
+          command:  touch spec/dummy/public/webpack/test/*
+      - run:
+          name: Run rspec tests
           command: |
             cd spec/dummy && bundle exec rspec --format RspecJunitFormatter \
                                                --out ~/rspec/rspec.xml \
