--- a/spec/dummy/Gemfile
+++ b/spec/dummy/Gemfile
@@ -2,10 +2,11 @@ source "https://rubygems.org"
 
 eval_gemfile File.expand_path("../../react_on_rails_pro.gemspec", __dir__)
 
-gem "react_on_rails", "11.0.4"
+gem "react_on_rails", "11.0.7"
 # gem "react_on_rails", path: "../../../react_on_rails"
 # gem "react_on_rails", github: "shakacode/react_on_rails"
 
+gem "net-http-persistent", "~> 3"
 gem "react_on_rails_pro", path: "../.."
 
 gem "webpacker"
