Easy default vm-render config, linting, etc. (#46)
* Set to v 1.0.0
* Easy default vm-render config
* ENV values can be used for all renderer settings and the values used
are echoed.
* ENV values for default config are:
  * PORT
  * LOG_LEVEL
  * RENDERER_BUNDLE_PATH
  * RENDERER_WORKERS_COUNT
  * RENDERER_PASSWORD
  * RENDERER_ALL_WORKERS_RESTART_INTERVAL
  * RENDERER_DELAY_BETWEEN_INDIVIDUAL_WORKER_RESTARTS

* Defaults include if not from ENV:
  DEFAULT_TMP_DIR = '/tmp/react-on-rails-pro-vm-renderer-bundles';
  DEFAULT_PORT = 3800;
  DEFAULT_LOG_LEVEL = 'info';

* Startup prints as follows
Starting React on Rails Pro VM Renderer using the default configuration.
info: VM Renderer v1.0.0, protocol v1.0.0
info: Default values for settings {"bundlePath":"/tmp/react-on-rails-pro-vm-renderer-bundles","port":"3000","logLevel":"info","workersCount":7}
info: Customized values for settings {}
info: ENV values used for settings {"PORT":"3000"}
info: Final settings used {"bundlePath":"/tmp/react-on-rails-pro-vm-renderer-bundles","port":"3800","logLevel":"info","workersCount":7,"password":"<NOT PROVIDED>","allWorkersRestartInterval":"<NOT PROVIDED>","delayBetweenIndividualWorkerRestarts":"<NOT PROVIDED>"}
info: No schedule for workers restarts

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,6 +11,13 @@ aliases:
              echo "Ruby version: "; ruby -v
              echo "Node version: "; node -v
              echo "Yarn version: "; yarn --version
+  - &lint-js
+    name: Linting of JS
+    command: yarn lint
+
+  - &lint-ruby
+    name: Linting of Ruby
+    command: bundle exec rubocop
 
   # Install/update Node modules for renderer package unless existing set of modules is satisfying Yarn.
   - &install-package-node-modules
@@ -80,9 +87,20 @@ aliases:
       sudo apt-get install google-chrome-stable
       echo -e "\nInstalled $(google-chrome --version)"
 
-  -
-
 jobs:
+  # Lint all
+  lint-js-and-ruby:
+    docker:
+      - image: circleci/ruby:2.4.4-stretch-node
+    steps:
+      - checkout
+      - run: *print-system-info
+      - restore_cache: *restore-package-node-modules-cache
+      - restore_cache: *restore-package-gem-cache
+      - run: *install-package-ruby-gems
+      - run: *lint-ruby
+      - run: *lint-js
+
   # Install Node modules for Renderer package with Yarn and save them to chache.
   install-package-node-packages:
     docker:
@@ -280,6 +298,10 @@ workflows:
       - install-package-ruby-gems
       - install-dummy-app-node-packages
       - install-dummy-app-ruby-gems
+      - lint-js-and-ruby:
+          requires:
+            - install-package-node-packages
+            - install-package-ruby-gems
       - build-dummy-app-webpack-test-bundles:
           requires:
             - install-dummy-app-node-packages
@@ -294,9 +316,8 @@ workflows:
       - rspec-dummy-app:
           requires:
             - install-package-ruby-gems
-            - install-package-ruby-gems
-            - build-dummy-app-webpack-test-bundles
             - install-dummy-app-ruby-gems
+            - build-dummy-app-webpack-test-bundles
       - rspec-dummy-app-vm-renderer:
           requires:
             - install-package-ruby-gems
