Easy default vm-render config, linting, etc. (#46)
* Set to v 1.0.0
* Easy default vm-render config
* ENV values can be used for all renderer settings and the values used
are echoed.
* ENV values for default config are:
  * PORT
  * LOG_LEVEL
  * RENDERER_BUNDLE_PATH
  * RENDERER_WORKERS_COUNT
  * RENDERER_PASSWORD
  * RENDERER_ALL_WORKERS_RESTART_INTERVAL
  * RENDERER_DELAY_BETWEEN_INDIVIDUAL_WORKER_RESTARTS

* Defaults include if not from ENV:
  DEFAULT_TMP_DIR = '/tmp/react-on-rails-pro-vm-renderer-bundles';
  DEFAULT_PORT = 3800;
  DEFAULT_LOG_LEVEL = 'info';

* Startup prints as follows
Starting React on Rails Pro VM Renderer using the default configuration.
info: VM Renderer v1.0.0, protocol v1.0.0
info: Default values for settings {"bundlePath":"/tmp/react-on-rails-pro-vm-renderer-bundles","port":"3000","logLevel":"info","workersCount":7}
info: Customized values for settings {}
info: ENV values used for settings {"PORT":"3000"}
info: Final settings used {"bundlePath":"/tmp/react-on-rails-pro-vm-renderer-bundles","port":"3800","logLevel":"info","workersCount":7,"password":"<NOT PROVIDED>","allWorkersRestartInterval":"<NOT PROVIDED>","delayBetweenIndividualWorkerRestarts":"<NOT PROVIDED>"}
info: No schedule for workers restarts

--- a/react_on_rails_pro/spec/dummy/package.json
+++ b/react_on_rails_pro/spec/dummy/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "react_on_rails",
-  "version": "2.0.0-rc.2",
+  "name": "react_on_rails_pro_dummy",
+  "version": "1.0.0",
   "description": "example of server rendering",
   "main": "server.js",
   "engines": {
