--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-on-rails-pro-vm-renderer",
-  "version": "0.9.1",
+  "version": "1.0.0",
   "protocolVersion": "1.0.0",
   "description": "react-on-rails-pro JavaScript for react_on_rails_pro Ruby gem",
   "main": "packages/vm-renderer/lib/ReactOnRailsProVmRenderer.js",
@@ -50,11 +50,12 @@
     "clean": "rm -rf packages/vm-renderer/lib",
     "babel": "babel --out-dir packages/vm-renderer/lib packages/vm-renderer/src",
     "build": "yarn run clean && yarn run babel",
+    "build:dev": "yarn run clean && yarn run babel -w",
     "postinstall": "yarn run build",
     "build-watch": "babel --watch --out-dir packages/vm-renderer/lib node_package/src",
     "prepublish": "yarn run build",
     "prerelease": "yarn run check && yarn run clean && yarn run build",
-    "start": "node vm-renderer.js",
+    "start": "echo 'Starting React on Rails Pro VM Renderer using the default configuration.' && node packages/vm-renderer/lib/default-vm-renderer.js",
     "eslint": "eslint .",
     "flow": "flow check packages/vm-renderer",
     "lint": "yarn run eslint",
