--- a/react_on_rails_pro/.eslintignore
+++ b/react_on_rails_pro/.eslintignore
@@ -1,7 +1,9 @@
 node_modules
 coverage
+gen-documentation/**
 spec/react_on_rails/dummy-for-generators
 spec/dummy
+spec/dummy/public/webpack/**
 packages/vm-renderer/src/__obsolete
 packages/vm-renderer/lib/
 packages/vm-renderer/tests/node_modules
