--- a/react_on_rails_pro/package.json
+++ b/react_on_rails_pro/package.json
@@ -34,11 +34,11 @@
   },
   "devDependencies": {
     "blue-tape": "^1.0.0",
-    "eslint": "^3.19.0",
-    "eslint-config-shakacode": "^14.1.1",
-    "eslint-plugin-import": "^2.2.0",
-    "eslint-plugin-jsx-a11y": "^4.0.0",
-    "eslint-plugin-react": "^6.10.3",
+    "eslint": "^4.9.0",
+    "eslint-config-shakacode": "^16.0.1",
+    "eslint-plugin-import": "^2.8.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.4.0",
     "flow-bin": "^0.43.1",
     "jsdom": "^9.12.0",
     "release-it": "^2.7.1",
@@ -55,7 +55,7 @@
     "build": "yarn run clean && yarn run babel",
     "build:dev": "yarn run clean && yarn run babel -w",
     "postinstall": "yarn run build",
-    "build-watch": "babel --watch --out-dir packages/vm-renderer/lib node_package/src",
+    "build-watch": "babel --watch --out-dir packages/vm-renderer/lib packages/vm-renderer/src",
     "prepublish": "yarn run build",
     "prerelease": "yarn run check && yarn run clean && yarn run build",
     "start": "echo 'Starting React on Rails Pro VM Renderer using the default configuration.' && node packages/vm-renderer/lib/default-vm-renderer.js",
