More efficient calculation of the request digest (#64)
* Previously, we would do a regexp replace to filter out the dom node id
because if was randomized
* React on Rails 11.1.x provides a default to say not to randomize

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -116,7 +116,7 @@ jobs:
           paths:
             - node_modules
 
-  # Install Node modules for dummy app with Yarn and save them to chache.
+  # Install Node modules for dummy app with Yarn and save them to cache.
   install-dummy-app-node-packages:
     docker:
       - image: circleci/ruby:2.4.4-stretch-node
