--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
   "scripts": {
     "test": "babel-tape-runner -r node_package/tests/helpers/test_helper.js node_package/tests/*.js | tap-spec",
     "clean": "rm -rf node_package/lib",
-    "prepare": "npm run build",
+    "prepare": "npm run babel",
     "prepublish": "npm run prepare",
     "babel": "babel --out-dir node_package/lib node_package/src",
     "build": "yarn run clean && yarn run babel",
