--- a/packages/vm-renderer/.babelrc
+++ b/packages/vm-renderer/.babelrc
@@ -1,5 +1,11 @@
 {
-  "presets": ["es2015", "stage-2", "react"],
+  "presets": [
+    ["env", {
+      "targets": {
+        "node": "current"
+      }
+    }]
+  ],
   "plugins": [
     "transform-flow-strip-types",
     "transform-runtime"
