updated eslint and flow, fixed a few eslint errors, ignored a flow error, added a few rules in eslintrc

--- a/.eslintrc
+++ b/.eslintrc
@@ -15,6 +15,9 @@ env:
 
 rules:
   no-console: 0
+  function-paren-newline: 0
+  object-curly-newline: 0
+  
 
   # https://github.com/benmosher/eslint-plugin-import/issues/340
   import/no-extraneous-dependencies: 0
